DOC : ajout des uses dans la documentation
